test/analyzer/input_programs/invalid_programs/program22.tea
# Invalid nested variable assignment
a := 0
b := 1

a = b = 2